# Robot_Farm

./: .gitignore  ZEPHYR_PROJECT_ARCHITECTURE_GUIDE.md  run_telegram_ai_devops.bat
Architecture/: architect.html  architecture.md  program_flow.md
Firmware/my_agri_robot/: CMakeLists.txt  prj.conf
Firmware/my_agri_robot/src/: main.cpp
Firmware/my_agri_robot/src/app_tasks/: cmd_task.cpp  cmd_task.h  motor_task.cpp  motor_task.h
Firmware/my_agri_robot/src/include/: app_config.h  motor_interface.h
Firmware/my_agri_robot/src/subsystems/comms/: cmd_hw.cpp  cmd_hw.h  cmd_parser.cpp  cmd_receiver.cpp  cmd_receiver.h  cmd_transfer.cpp  cmd_transfer.h
Firmware/my_agri_robot/src/subsystems/motor_control/: motor_app.cpp  motor_drv.cpp  motor_drv.h  motor_hw.cpp  motor_sm.cpp
Project_Farm_Here/: hello_world.py
Tools/: README.md
Tools/Project_Farm_Here/: opencv_camera.py
Tools/telegram_control/: .env.example  .gitignore  README.md  main.py
my_agri_robot/: app.overlay
telegram_control/: __init__.py  config.py  requirements.txt
telegram_control/commands/: __init__.py  approve_cmd.py  build_cmd.py  camera_cmd.py  deploy_cmd.py  flash_cmd.py  git_cmd.py  help_cmd.py  logs_cmd.py  project_cmd.py  result_cmd.py  task_cmd.py
telegram_control/services/: __init__.py  ai_devops_worker.py  camera_service.py  cline_service.py  deploy_service.py  git_service.py  project_process_service.py  result_service.py  serial_service.py  task_worker.py
telegram_control/utils/: auth.py  logger.py
zephyrproject/build_my_agri_robot/: CMakeCache.txt  sysbuild_modules.txt  (+2 more)
(+419 files in other folders)
